# CompilationPrinciple

./: .gitignore  README.md
LLVMJIT/: CMakeLists.txt  llvmjit.h  main.cpp
RegexEngine/: README.md
RegexEngine/src/: ASTNode.cpp  ASTNode.h  Any.h  CharSet.cpp  CharSet.h  CharTransition.cpp  CharTransition.h  DFAState.cpp  DFAState.h  FirstFollowSet.cpp  FirstFollowSet.h  GrammarNFAState.cpp  GrammarNFAState.h  GrammarNode.cpp  GrammarNode.h  GrammarTransition.cpp  GrammarTransition.h  Item.cpp  Item.h  LLParser.cpp  LLParser.h  LRParser.cpp  LRParser.h  Lexer.cpp  Lexer.h  Production.cpp  Production.h  Regex.cpp  Regex.h  SampleGrammar.cpp  SampleGrammar.h  Stack.h  State.cpp  State.h  Token.cpp  Token.h  TokenReader.cpp  TokenReader.h  Tokens.cpp  Tokens.h  (+1 more)
RegexEngine/tests/CharSet_test/: CharSet_test.cpp  Makefile
RegexEngine/tests/LLParser_test/: LLParser_test.cpp  Makefile
RegexEngine/tests/LRParser/: LRParser_test.cpp
RegexEngine/tests/LRParser_test/: LRParser_test.cpp  Makefile  readme.md
RegexEngine/tests/Lexer_test/: Lexer_test.cpp  Makefile
RegexEngine/tests/Regex_test/: Makefile  NFA.txt  NFA2DFA.txt  Regex_test.cpp  readme.md  regex.txt
SimpleLexer/: Makefile  SimpleLexer.cpp  SimpleLexer_test.cpp
SqlParsing/: CMakeLists.txt  readme.md
SqlParsing/src/: main.cpp
SqlParsing/src/grammar/: CommonLexer.g4  SQLVisitor.cpp  SQLVisitor.h  SelectStmt.cpp  SelectStmt.h  SqlParsing.g4  SqlParsing.interp  SqlParsingBaseListener.cpp  SqlParsingBaseListener.h  SqlParsingBaseVisitor.cpp  SqlParsingBaseVisitor.h  SqlParsingLexer.cpp  SqlParsingLexer.h  SqlParsingListener.cpp  SqlParsingListener.h  SqlParsingParser.cpp  SqlParsingParser.h  SqlParsingVisitor.cpp  SqlParsingVisitor.h  WhereExpr.cpp  WhereExpr.h
SqlParsing/src/grammar/.antlr/: SQLiteParserLexer.interp  SQLiteParserLexer.java  SqlParsing.interp  SqlParsing.tokens  SqlParsingLexer.java  SqlParsingLexer.tokens  SqlParsingParser.java
SqlParsing/tests/: test.sql
brainfuck-jit-interpreter/: .gitignore  Makefile  benchmark.py  interpreter.cpp  readme.md
compiler/: Makefile  ast.c  ast.h  bcgen.c  bcgen.h  code.c  code.h  lexer.c  lexer.h  main.c  opcode.h  parser.c  util.c  util.h  vm.c  vm.h
craft/src/: SimpleLexer.cpp  SimpleLexer.h  SimpleParser.cpp
craft/tests/SimpleCalculator/: SimpleCalculator_test.cpp
craft/tests/SimpleLexer/: Makefile
craft/tests/SimpleParser/: Makefile
craft/tests/SimpleScript/: Makefile  SimpleScript_test.cpp
lc3VM/: Makefile  lc3-alt.cpp  readme.md
llvm-demo/: CMakeLists.txt  exampels.cpp  llvmjit.h  main.cpp
opt/: CMakeLists.txt  main.cpp
playscript-cpp/: CMakeLists.txt  README.md
playscript-cpp/src/: Super.h  main.cpp
playscript-cpp/src/grammar/: ASTEvaluator.cpp  ASTEvaluator.h  AnnotatedTree.cpp  AnnotatedTree.h  AsmGen.cpp  AsmGen.h  BlockScope.cpp  BlockScope.h  BreakObject.h  CharStr.h  Class.cpp  Class.h  ClassObject.cpp  ClassObject.h  ClosureAnalyzer.cpp  ClosureAnalyzer.h  CommonLexer.g4  CompilationLog.h  ConvertToAsm.cpp  ConvertToAsm.h  DefaultConstructor.h  DefaultFunctionType.cpp  DefaultFunctionType.h  Function.cpp  Function.h  FunctionObject.cpp  FunctionObject.h  FunctionType.h  IRGen.cpp  IRGen.h  LValue.h  MyLValue.cpp  MyLValue.h  NameSpace.cpp  NameSpace.h  NullObject.cpp  NullObject.h  PlayObject.cpp  PlayObject.h  PlayScript.g4  (+45 more)
playscript-cpp/tests/: asm.play  asm_div.play  asm_if.play  asm_mixed_arithmetic.play  asm_mul.play  asm_sub.play  asm_while.play  asm_while_2.play  class.play  clojure.play  firstClassFunction.play  linkedList.play  scope.play  test.cpp
pythonvm/: README.md
pythonvm/src/code/: binaryFileParser.cpp  binaryFileParser.hpp  bytecode.hpp  codeObject.cpp  codeObject.hpp
pythonvm/src/inc/: railgun.hpp
pythonvm/src/memory/: heap.cpp  heap.hpp  oopClosure.cpp  oopClosure.hpp
pythonvm/src/object/: hiDict.cpp  hiDict.hpp  hiDouble.cpp  hiDouble.hpp  hiInteger.cpp  hiInteger.hpp  hiList.cpp  hiList.hpp  hiObject.cpp  (+5 more)
report/: CMakeLists.txt  readme.md
report/src/: main.cpp
report/src/grammar/: Add.cpp  Add.h  BinaryOp.cpp  BinaryOp.h  CommonLexer.g4  Div.cpp  Div.h  DyArray.cpp  DyArray.h  EQ.cpp  EQ.h  FieldEvaluator.cpp  FieldEvaluator.h  GE.cpp  GE.h  GT.cpp  GT.h  LE.cpp  LE.h  LT.cpp  LT.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  PlayReport.cpp  PlayReport.g4  PlayReport.h  PlayReportBaseListener.cpp  PlayReportBaseListener.h  PlayReportBaseVisitor.cpp  PlayReportBaseVisitor.h  PlayReportLexer.cpp  PlayReportLexer.h  PlayReportListener.cpp  PlayReportListener.h  PlayReportParser.cpp  PlayReportParser.h  PlayReportVisitor.cpp  PlayReportVisitor.h  (+7 more)
report/src/grammar/.antlr/: CommonLexer.java  PlayReportLexer.java  PlayReportParser.java
src/: ASTNode.h  SimpleCalculator.cpp  SimpleCalculator.h  SimpleLexer.h  SimpleParser.cpp  SimpleParser.h  SimpleScript.cpp  SimpleScript.h  Token.h  common.h
ssa-compiler/: .gitignore  Cargo.toml  shell.nix
ssa-compiler/docs/: Displayable.md  InterferenceGraph.md  Operator.md  RegisterSet.md  SSAOperator.md  SSA转换算法.md  VRegGenerator的作用.md  add_procedure_prologues.md  allocate.md  ast转换ir.md  build_interference_graph.md  build_set_analysis.md  build_sets_phase1.md  build_sets_phase1_leaders.md  build_sets_phase2.md  cfg_del.md  conventionalize_ssa.md  copy_propagation_optimize.md  copy_propagation_propagate.md  find_coloring.md  find_coloring2.md  gc_map的作用.md  gvn_pre_optimize_analysis.md  insert_recurse.md  insert_recurse2.md  ir_to_cfg.md  live_out.md  phi_translate.md  phi_translate2.md  phi_translate3.md  pin_liveranges.md  rewrite_liveranges.md  select_instructions.md  spill_liverange.md  to_assembly.md  to_dot.md  union_find.md  全局寄存器分析算法.md  关键边分割.md  合并CFG.md  (+8 more)
ssa-compiler/examples/: correct3_fixed.lang  correct4_fixed.lang
ssa-compiler/src/: backend.rs  ir.rs  lib.rs  parser.rs  ssa.rs
tests/SimpleCalculator/: Makefile  SimpleCalculator_test.cpp
tests/SimpleParser/: SimpleParser_test.cpp
tests/SimpleScript/: SimpleScript_test.cpp
xml/: .gitignore  readme.md
xml/inputs/: cat.xml  entity.xml
xml/src/: XMLLexer.g4  XMLParser.g4
(+30 files in other folders)
